[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scripts/randompitch.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/sfx/sfx_punch4.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/sfx/sfx_punch3.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/sfx/sfx_punch5.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/sfx_punch2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/sfx_punch1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/sfx_punch6.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/scenes/punchsoumd.gd" type="Script" id=8]

[node name="punchsoumd" type="Node2D"]
script = ExtResource( 8 )

[node name="hurt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 1 )

[node name="hurt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 1 )

[node name="hurt3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 1 )

[node name="hurt4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 1 )

[node name="hurt5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 1 )

[node name="hurt6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 1 )
